--- a/{{cookiecutter.project_slug}}/.gitignore
+++ b/{{cookiecutter.project_slug}}/.gitignore
@@ -1,3 +1,9 @@
+## Custom
+media
+media-storage
+staticfiles
+.env
+
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -164,15 +170,6 @@ typings/
 # Local History for devcontainer
 .devcontainer/bash_history
 
-{% if cookiecutter.editor == 'PyCharm' -%}
-# Provided default Pycharm Run/Debug Configurations should be tracked by git
-# In case of local modifications made by Pycharm, use update-index command
-# for each changed file, like this:
-# git update-index --assume-unchanged .idea/{{cookiecutter.project_slug}}.iml
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -219,7 +216,6 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-{% endif %}
 
 
 ### Windows template
