Fix tests, Add .env.example, Add default CELERY_BROKER_URL, Update README, Ask for Repository URL

--- a/{{cookiecutter.project_slug}}/.gitlab/ci/deploy.gitlab-ci.yml
+++ b/{{cookiecutter.project_slug}}/.gitlab/ci/deploy.gitlab-ci.yml
@@ -4,3 +4,4 @@ include:
       services: app,~postgres,~migration,~redis
       base_domain: v2.singular-it-test.de
       base_compose_file: .gitlab/docker-compose.staging.yml
+      auto_stop_in: 6 months
