--- a/{{cookiecutter.project_slug}}/.gitlab/Dockerfile
+++ b/{{cookiecutter.project_slug}}/.gitlab/Dockerfile
@@ -21,3 +21,7 @@ COPY requirements/production.txt requirements/production.txt
 RUN pip install -r requirements/production.txt
 
 COPY . .
+
+FROM base as app
+
+RUN python manage.py collectstatic --no-input --settings=config.settings.static_files
