--- a/{{cookiecutter.project_slug}}/.gitlab/docker-compose.staging.yml
+++ b/{{cookiecutter.project_slug}}/.gitlab/docker-compose.staging.yml
@@ -24,7 +24,7 @@ services:
     build:
       context: ..
       dockerfile: .gitlab/Dockerfile
-      target: base
+      target: app
     restart: unless-stopped
     command: ["gunicorn", "-b", ":8000", "--workers=3", "--enable-stdio-inheritance", "config.wsgi:application"]
     expose:
