--- a/{{cookiecutter.project_slug}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_slug}}/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
       - id: check-case-conflict
       - id: check-docstring-first
       - id: detect-private-key
+      - id: requirements-txt-fixer
 
   - repo: https://github.com/adamchainz/django-upgrade
     rev: '1.15.0'
