--- a/{{cookiecutter.project_slug}}/.gitlab/ci/test.gitlab-ci.yml
+++ b/{{cookiecutter.project_slug}}/.gitlab/ci/test.gitlab-ci.yml
@@ -1,8 +1,8 @@
 pytest:
   stage: test
   image: orbisk/django-test:3.11
-  tags:
-    - medium
+  extends:
+    - .size:medium
   services:
     - postgres:{{ cookiecutter.postgresql_version }}
   variables:
