--- a/{{cookiecutter.project_slug}}/.gitlab/ci/lint.gitlab-ci.yml
+++ b/{{cookiecutter.project_slug}}/.gitlab/ci/lint.gitlab-ci.yml
@@ -1,7 +1,7 @@
 precommit:
   stage: lint
-  tags:
-   - medium
+  extends:
+    - .size:medium
   image: python:3.11
   variables:
     PRE_COMMIT_HOME: ${CI_PROJECT_DIR}/.cache/pre-commit
